Fix spacing of first item in pagination

--- a/hines/static/hines/src/sass/partials/_nav.scss
+++ b/hines/static/hines/src/sass/partials/_nav.scss
@@ -66,5 +66,9 @@
   .nav__item {
     // More spaced out because they're so small:
     padding-right: ($nav-link-padding-x * 2);
+
+    &:first-child {
+      padding-left: ($nav-link-padding-x * 2);
+    }
   }
 }
